refactor: move api to its own folder, set up swagger
